# ts-lab

./: .gitignore  README.md  TODO.md  pyproject.toml
benchmarks/: __init__.py  run_benchmark.py
benchmarks/golden_dataset/: README.md  manifest.json
benchmarks/scripts/: __init__.py  audit.py  coverage_check.py  kappa_calc.py  sample_selector.py
clients/: __init__.py  ts_platform.py
docs/: README.md  annotation-spec.md  benchmark-methodology.md  golden-dataset.md  pending-decisions.md  reproducibility.md
docs/experiments/: README.md  template.md
docs/track-c/: README.md  issue-1-response-format.md  issue-2-rendered-image.md  issue-3-raw-output.md
eval/: __init__.py  compare.py  metrics.py
notebooks/: README.md
techniques/: README.md  __init__.py
techniques/vl_self_refinement/: __init__.py  baseline.py  chain_of_zoom.py  format_locking.py  guided_json.py  robust_parser.py  self_consistency.py  self_critique.py  token_budget.py
tests/: test_robust_parser.py  test_smoke.py
